example/src/snapshots/rust_sitter_example__repetitions__tests__repetitions_grammar-3.snap
---
source: example/src/repetitions.rs
expression: "grammar::Repetitions::parse(\"list 1, 2\")"
---
ParseResult {
    result: Some(
        List(
            NumberList {
                _list: (),
                numbers: Spanned {
                    value: [
                        Spanned {
                            value: Some(
                                1,
                            ),
                            position: Position {
                                bytes: 5..6,
                                start: Point {
                                    line: 1,
                                    column: 6,
                                },
                                end: Point {
                                    line: 1,
                                    column: 7,
                                },
                            },
                        },
                        Spanned {
                            value: Some(
                                2,
                            ),
                            position: Position {
                                bytes: 8..9,
                                start: Point {
                                    line: 1,
                                    column: 9,
                                },
                                end: Point {
                                    line: 1,
                                    column: 10,
                                },
                            },
                        },
                    ],
                    position: Position {
                        bytes: 5..9,
                        start: Point {
                            line: 1,
                            column: 6,
                        },
                        end: Point {
                            line: 1,
                            column: 10,
                        },
                    },
                },
            },
        ),
    ),
    errors: [],
}
