example/src/snapshots/rust_sitter_example__repetitions__tests__repetitions_grammar.snap
---
source: example/src/repetitions.rs
expression: "grammar::Repetitions::parse(\"list\")"
---
ParseResult {
    result: Some(
        List(
            NumberList {
                _list: (),
                numbers: Spanned {
                    value: [],
                    position: Position {
                        bytes: 0..0,
                        start: Point {
                            line: 1,
                            column: 1,
                        },
                        end: Point {
                            line: 1,
                            column: 1,
                        },
                    },
                },
            },
        ),
    ),
    errors: [],
}
