example/src/snapshots/rust_sitter_example__repetitions__tests__repetitions_grammar2-3.snap
---
source: example/src/repetitions.rs
expression: "grammar2::parse(\"1 2\")"
---
Ok(
    NumberList {
        numbers: Spanned {
            value: [
                Spanned {
                    value: 1,
                    byte_span: (
                        0,
                        1,
                    ),
                    line_span: (
                        Point {
                            line: 1,
                            column: 1,
                        },
                        Point {
                            line: 1,
                            column: 2,
                        },
                    ),
                },
                Spanned {
                    value: 2,
                    byte_span: (
                        2,
                        3,
                    ),
                    line_span: (
                        Point {
                            line: 1,
                            column: 3,
                        },
                        Point {
                            line: 1,
                            column: 4,
                        },
                    ),
                },
            ],
            byte_span: (
                0,
                3,
            ),
            line_span: (
                Point {
                    line: 1,
                    column: 1,
                },
                Point {
                    line: 1,
                    column: 4,
                },
            ),
        },
    },
)
