example/src/snapshots/rust_sitter_example__repetitions__tests__repetitions_grammar2.snap
---
source: example/src/repetitions.rs
expression: "grammar2::parse(\"\")"
---
Ok(
    NumberList {
        numbers: Spanned {
            value: [],
            byte_span: (
                0,
                0,
            ),
            line_span: (
                Point {
                    line: 1,
                    column: 1,
                },
                Point {
                    line: 1,
                    column: 1,
                },
            ),
        },
    },
)
