example/src/snapshots/rust_sitter_example__repetitions__tests__repetitions_grammar3-3.snap
---
source: example/src/repetitions.rs
expression: "grammar3::parse(\"1, 2\")"
---
Ok(
    NumberList {
        numbers: Spanned {
            value: [
                Spanned {
                    value: Some(
                        1,
                    ),
                    byte_span: (
                        0,
                        1,
                    ),
                    line_span: (
                        Point {
                            line: 1,
                            column: 1,
                        },
                        Point {
                            line: 1,
                            column: 2,
                        },
                    ),
                },
                Spanned {
                    value: Some(
                        2,
                    ),
                    byte_span: (
                        3,
                        4,
                    ),
                    line_span: (
                        Point {
                            line: 1,
                            column: 4,
                        },
                        Point {
                            line: 1,
                            column: 5,
                        },
                    ),
                },
            ],
            byte_span: (
                0,
                4,
            ),
            line_span: (
                Point {
                    line: 1,
                    column: 1,
                },
                Point {
                    line: 1,
                    column: 5,
                },
            ),
        },
        metadata: 123,
    },
)
