example/src/snapshots/rust_sitter_example__repetitions__tests__repetitions_grammar3.snap
---
source: example/src/repetitions.rs
expression: "grammar3::parse(\"\")"
---
Ok(
    NumberList {
        numbers: Spanned {
            value: [],
            byte_span: (
                0,
                0,
            ),
            line_span: (
                Point {
                    line: 0,
                    column: 0,
                },
                Point {
                    line: 0,
                    column: 0,
                },
            ),
        },
        metadata: 123,
    },
)
